--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/6924/6924972.png" />
     
-    <!-- Mona Sans Font -->
-    <link href="https://fonts.cdnfonts.com/css/mona-sans" rel="stylesheet">
+    <!-- Mona Sans Font from GitHub -->
+    <link rel="preconnect" href="https://github.githubassets.com" crossorigin>
+    <style>
+      @font-face {
+        font-family: 'Mona Sans';
+        src: url('https://github.githubassets.com/assets/mona-sans-55441e3d2a08.woff2') format('woff2');
+        font-weight: 200 900;
+        font-style: normal;
+        font-display: swap;
+      }
+    </style>
     
     <!-- Open Graph / Social Sharing -->
     <meta property="og:type" content="website" />
